[tool.poetry]
name = "jeremy_tapia_portfolio_website"
version = "0.1.0"
description = "Jeremy Tapia's portfolio website"
authors = ["jeremy <engjat94@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.95.1"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
